# Shield

./: .gitignore  CMakeLists.txt  README.md
components/data_types/: CMakeLists.txt  data_types.c
components/data_types/include/: data_types.h
components/drivers/: CMakeLists.txt  driver_accelerometer.cpp  driver_ads1115.c  driver_bno085.c  driver_current.c  driver_gyroscope.cpp  driver_inmp441.c  driver_magnetometer.cpp  driver_mcp9808.c  driver_mpl3115.c  driver_photodiode.c  driver_vibration.c
components/sd_storage/: CMakeLists.txt  sd_storage.c
components/sd_storage/include/: sd_storage.h
components/sensor_hal/: CMakeLists.txt
components/sensor_hal/include/: sensor_hal.h
main/: CMakeLists.txt  main_dual_core.c  main_dual_core.cpp
